-------------------------------------------------------------------
Wed May 11 19:33:44 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>

- add a patch file for Kernel 2.6.39 (deprecated BKL issue)

-------------------------------------------------------------------
Wed Apr 27 22:17:13 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>

- fix the path in the switchlibglx script on SLE 10
- add more Kernel packages to fglrx-kernel-build.sh:
  - kernel-bigsmp
  - kernel-vanilla

-------------------------------------------------------------------
Wed Apr 27 00:12:11 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>

- fix ati-packager.sh because some files were removed
  in /usr/X11R6/lib{,64}/fglrx/

-------------------------------------------------------------------
Sat Mar 26 15:23:20 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- move out the creating of symlinks from the spec file into the
  switchable scripts

-------------------------------------------------------------------
Sat Mar 26 00:34:18 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- add 2 switchable scripts for PowerXpress:
  - switchlibGL
  - switchlibglx
- update spec file

-------------------------------------------------------------------
Tue Mar 08 09:12:40 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- add a rotated line while rpmbuild is running

-------------------------------------------------------------------
Sun Feb 27 23:54:00 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- remove patch file for Kernel 2.6.38 because is no longer required for 8.84

-------------------------------------------------------------------
Sun Feb 20 05:31:00 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- change /etc/modprobe.d/fglrx.conf to /etc/modprobe.d/50-fglrx.conf

-------------------------------------------------------------------
Sun Feb 20 04:41:00 CET 2011 - Sebastian Siebert <freespacer@gmx.de>

- fix to set the local language to LANG=C and LC_ALL=C